# cookiecutter-clion-c-cxx-mpi-openmp-remote_hpc

./: cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  CMakeLists.txt  README.md
{{cookiecutter.project_name}}/{{cookiecutter._cmake_dir}}/: ExternalDependencies.cmake  PrintDebug.cmake  utils.cmake
{{cookiecutter.project_name}}/{{cookiecutter._configs_dir}}/: HPC.config  local.config  project.env  project.env.template
{{cookiecutter.project_name}}/{{cookiecutter._include_dir}}/benchmark/: benchmark.h
{{cookiecutter.project_name}}/{{cookiecutter._include_dir}}/debug/: print_debug.h  unique_print_debug.h
{{cookiecutter.project_name}}/{{cookiecutter._scripts_dir}}/hpc_helpers/: lastError.sh  lastJobDir.sh  lastOutput.sh  lastStat.sh  startup.sh
{{cookiecutter.project_name}}/{{cookiecutter._scripts_dir}}/run/: hpc_run.sh  local_run.sh  run.pbs
{{cookiecutter.project_name}}/{{cookiecutter._src_dir}}/: main.cpp
{{cookiecutter.project_name}}/{{cookiecutter._src_dir}}/benchmark/: CMakeLists.txt  benchmark.c
